Name:			alacarte
Version:		0.1
Synopsis:            	Data types a la carte.
Description:		Wouter Swierstra's Functional Pearl: /Data types a la carte/.
Category:            	Data
License:		AllRightsReserved
License-file:		LICENSE
Author:			Patrick Bahr, Tom Hvitved, Morten Ib Nielsen
Maintainer:		paba@diku.dk
Build-Type:		Custom
Cabal-Version:		>=1.8


library
  Exposed-Modules:      Data.ALaCarte, Data.ALaCarte.Equality, Data.ALaCarte.Ordering,
                        Data.ALaCarte.TermRewriting, Data.ALaCarte.Automata
  Other-Modules:        Data.ALaCarte.Derive

  Build-Depends:	base >= 4, template-haskell, containers
  hs-source-dirs:	src
  ghc-options:          -W
