Name:			alacarte
Version:		0.1
Synopsis:            	Data types a la carte.
Description:		Wouter Swierstra's Functional Pearl: /Data types a la carte/.
Category:            	Data
License:		AllRightsReserved
License-file:		LICENSE
Author:			Patrick Bahr, Tom Hvitved, Morten Ib Nielsen
Maintainer:		paba@diku.dk
Build-Type:		Custom
Cabal-Version:          >=1.8.0.6

flag test
  description: Build test executable.
  default:     False

flag benchmark
  description: Build benchmark executable.
  default:     False

library
  Exposed-Modules:      Data.ALaCarte, Data.ALaCarte.Product, Data.ALaCarte.Sum,
                        Data.ALaCarte.Term, Data.ALaCarte.Algebra, Data.ALaCarte.Equality,
                        Data.ALaCarte.Ordering, Data.ALaCarte.DeepSeq, Data.ALaCarte.Generic
                        Data.ALaCarte.TermRewriting, Data.ALaCarte.Automata,
                        Data.ALaCarte.Arbitrary, Data.ALaCarte.Show, Data.ALaCarte.Variables,
                        Data.ALaCarte.Decompose, Data.ALaCarte.Unification,
                        Data.ALaCarte.Derive, Data.ALaCarte.Matching, Data.ALaCarte.Multi,
                        Data.ALaCarte.Multi.Term, Data.ALaCarte.Multi.Sum,
                        Data.ALaCarte.Multi.HFunctor, Data.ALaCarte.Multi.Algebra,
                        Data.ALaCarte.Multi.Product

  Other-Modules:        Data.ALaCarte.Derive.Utils, Data.ALaCarte.Derive.Equality,
                        Data.ALaCarte.Derive.Ordering, Data.ALaCarte.Derive.Arbitrary,
                        Data.ALaCarte.Derive.Show, Data.ALaCarte.Derive.DeepSeq,
                        Data.ALaCarte.Derive.SmartConstructors, Data.ALaCarte.Derive.Foldable,
                        Data.ALaCarte.Derive.Traversable, Data.ALaCarte.Derive.HFunctor,
                        Data.ALaCarte.Derive.HFoldable, Data.ALaCarte.Derive.HTraversable

  Build-Depends:	base >= 4, template-haskell, containers, mtl, QuickCheck >= 2, derive, deepseq
  hs-source-dirs:	src
  ghc-options:          -W -O2

Executable test
  Main-is:		Data_Test.hs
  Build-Depends:	base >= 4, template-haskell, containers, mtl, QuickCheck >= 2, test-framework, test-framework-quickcheck2, derive
  hs-source-dirs:	src testsuite/tests
  ghc-options:          -fhpc
  if !flag(test)
    buildable:     False

Executable benchmark
  Main-is:		Benchmark.hs
  Build-Depends:	base >= 4, template-haskell, containers, mtl, QuickCheck >= 2, derive, deepseq, criterion, random, uniplate
  hs-source-dirs:	src benchmark
  ghc-options:          -O2
  if !flag(benchmark)
    buildable:     False